# Zero2Story

./: .gitignore  LICENSE  LICENSE-OFL  README.md  app.py  packages.txt  pyproject.toml  run.sh
assets/: palm_prompts.toml
constants/: css.py  desc.py  init_values.py
interfaces/: chat_ui.py  export_ui.py  plot_gen_ui.py  story_gen_ui.py  ui.py  utils.py  view_change_ui.py
modules/: __init__.py  image_maker.py  music_maker.py  palmchat.py  utils.py
modules/llms/: __init__.py  chatgpt_service.py  llama_service.py  llm_factory_abstracts.py  palm_service.py  utils.py
prompts/: chatgpt_chat_prompts.toml  palm_chat_prompts.toml  palm_prompts.toml
templates/: basic.jinja  basic_export.jinja  parser.py
